NLTOOLS 1.9 current
Changes after nltools 1.4

1. MAJOR feature improvements:

2. CONFIG changes:

3. IMPORTANT bugfixes:


$Id$