@@ -1,4 +1,4 @@
-.TH ULC 1 "ulc" "05 December 2007" "Husky - Portable Fidonet Software"
+.TH ULC 1 "nltools" "18 April 2012" "Husky - Portable Fidonet Software"
 .SH NAME
 ulc \- Husky Fido Userlist Compiler
 .SH SYNOPSIS
@@ -7,6 +7,7 @@ ulc \- Husky Fido Userlist Compiler
 .B ulc
 is the Husky Fido Userlist Compiler.
 .B ulc
+are utility in the nltools package. It
 reads all nodelists that are configured in Fidoconfig (see the "nodelist"
 keyword in Fidoconfig Manual) and creates the
 .IB FIDOUSER.LST
@@ -33,7 +34,7 @@ and Msged. For Msged, FIDOUSER.LST is currently the best method to
 implement a node lookup at all, because Msged's V7 routines are flawed.
 .P
 .B ulc
-is a part of the Husky Project (nlupdate module) and it shares config file
+is a part of the Husky Project (nltools module) and it shares config file
 (named fidoconfig) with other Husky programs. All configuration statements are
 described in the Fidoconfig Manual.
 .SH OPTIONS
