@@ -6,6 +6,8 @@ Changes after nltools 1.4
 2. CONFIG changes:
 
 3. IMPORTANT bugfixes:
-
+   nlupdate.exe renamed to nlupd.exe: all executables named like mask
+   *update*.exe are restricted by ULC (Windows 7). Also nlupdate renamed
+   for the all other OS
 
 $Id$
